@@ -37,6 +37,7 @@ Bugs fixed:
 - 2779966 Use upcalls for ei/ein in indCIMXMLHandler
 - 2794013 multiple wbemcats
 - 2761168 Return value does not comply DSP0200
+- 2736593 Null/No NewValue of SetProperty causes segfault
 
 Changes in 1.3.3
 ================
